tests/sumo/pedestrian_model/striping/errors/disconnected_route_invalid_permissions_ignore/errors.sumo.agg
Warning: Person 'p0' could not find sidewalk on edge 'middle', time=0.00.
Warning: Person 'p0' could not find sidewalk on edge 'middle', time=8.00.
Warning: Person 'p0' could not find sidewalk on edge 'middle', time=8.00.
Warning: Person 'p0' could not find sidewalk on edge 'end', time=16.00.
Warning: Person 'p0' could not find sidewalk on edge 'end', time=44.00.
Warning: 1 total messages of type: Destination edge '%' does not allow pedestrians.
Warning: 1 total messages of type: Person '%' could not find sidewalk on edge '%', time=%.
